fix forum-list spacing problem on mobile

--- a/assets/less/modules/forumlist.less
+++ b/assets/less/modules/forumlist.less
@@ -2,7 +2,7 @@
  * Forumlist
  * --------------------------------------------------*/
 .forums { margin-bottom: 0; }
-.forum { padding-bottom: @padding-base-vertical*4; }
+@media (min-width: @screen-tablet) { .forum { padding-bottom: @padding-base-vertical*4; } }
 
 .forum-name { 
 	// Structure
